@@ -1,0 +1,125 @@
+#vim:set fileencoding=utf-8:
+
+import ConfigParser
+import getopt
+import sys, os
+import re
+import gettext
+import locale
+
+locale.setlocale(locale.LC_ALL, '')
+try:
+    _ = gettext.translation('apt-listchanges').lgettext
+except IOError:
+    _ = lambda str: str
+
+class ALCConfig:
+    def __init__(self):
+        # Defaults
+        self.frontend = 'pager'
+        self.email_address = None
+        self.verbose = False
+        self.quiet = 0
+        self.show_all = False
+        self.confirm = False
+        self.headers = False
+        self.debug = False
+        self.save_seen = None
+        self.apt_mode = False
+        self.profile = None
+        self.which = 'both'
+        self.allowed_which = ('both', 'news', 'changelogs')
+
+    def read(self, file):
+        self.parser = ConfigParser.ConfigParser()
+        self.parser.read(file)
+
+    def expose(self):
+        if self.parser.has_section(self.profile):
+            for option in self.parser.options(self.profile):
+                value = None
+                if self.parser.has_option(self.profile, option):
+                    if option in ('confirm', 'run', 'show_all', 'headers', 'verbose'):
+                        value = self.parser.getboolean(self.profile, option)
+                    else:
+                        value = self.parser.get(self.profile, option)
+                setattr(self, option, value)
+
+    def get(self, option, defvalue=None):
+        return getattr(self, option, defvalue)
+
+    def usage(self, exitcode):
+        if exitcode == 0:
+            fh = sys.stdout
+        else:
+            fh = sys.stderr
+
+        fh.write(_("Usage: apt-listchanges [options] {--apt | filename.deb ...}\n"))
+        sys.exit(exitcode)
+
+
+    def getopt(self, argv):
+        try:
+            (optlist, args) = getopt.getopt(argv[1:], 'vf:s:cah', [
+                "apt", "verbose", "frontend=", "email-address=", "confirm",
+                "all", "headers", "save_seen=", "debug", "which=", "help",
+                "profile="])
+        except getopt.GetoptError:
+            return None
+
+        # Determine mode and profile before processing other options
+        for opt, arg in optlist:
+            if opt == '--profile':
+                self.profile = arg
+            elif opt == '--apt':
+                self.apt_mode = True
+
+        # Provide a default profile if none has been specified
+        if self.profile is None:
+            if self.apt_mode:
+                self.profile = 'apt'
+            else:
+                self.profile = 'cmdline'
+
+        # Expose defaults from config file
+        self.expose()
+
+        # Environment variables override config file
+        self.frontend = os.getenv('APT_LISTCHANGES_FRONTEND', self.frontend)
+
+        # Command-line options override environment and config file
+        for opt, arg in optlist:
+            if opt == '--help':
+                self.usage(0)
+            elif opt in ('-v', '--verbose'):
+                self.verbose = 1
+            elif opt in ('-f', '--frontend'):
+                self.frontend = arg
+            elif opt == '--email-address':
+                self.email_address = arg
+            elif opt in ('-c', '--confirm'):
+                self.confirm = 1
+            elif opt in ('-a', '--all'):
+                self.show_all = 1
+            elif opt in ('-h', '--headers'):
+                self.headers = 1
+            elif opt == '--save_seen':
+                self.save_seen = arg
+            elif opt == '--which':
+                if arg in self.allowed_which:
+                    self.which = arg
+                else:
+                    print _('Unknown option %s for --which.  Allowed are: %s.') % \
+                        (arg, ', '.join(self.allowed_which))
+                    sys.exit(1)
+            elif opt == '--debug':
+                self.debug = 1
+
+        if self.email_address == 'none':
+            self.email_address = None
+        if self.save_seen == 'none':
+            self.save_seen = None
+
+        return args
+
+__all__ = [ 'ALCConfig' ]
