@@ -6,8 +6,9 @@ apt-listchanges (2.71) UNRELEASED; urgency=low
 
   [ Library ]
 
-  * DebianControl* classes are renamed into Control*
+  * DebianControl* classes are renamed into Control*.
   * Move Packages, Changes classes (and Control* ones) into DebianFiles.py.
+  * Move Config to ALCConfig.py.
 
  -- Pierre Habouzit <madcoder@debian.org>  Sun, 15 Oct 2006 16:10:20 +0200
 
